-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11
-
Component/s: client-libs
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222291 | openjdk8u222 | Philip Race | P1 | Resolved | Fixed | b01 |
https://bugs.openjdk.java.net/browse/JDK-8171000 fixed
an Ubuntu 17.10 Robot screen capture bug but used C99 features
which were not enabled in the "standard" compilers used for Solaris + Linux
so builds on all our build servers now fail.
The fix is to move declarations of variables out of the for loop initialization.
an Ubuntu 17.10 Robot screen capture bug but used C99 features
which were not enabled in the "standard" compilers used for Solaris + Linux
so builds on all our build servers now fail.
The fix is to move declarations of variables out of the for loop initialization.
- backported by
-
JDK-8222291 Fix for 8171000 breaks Solaris + Linux builds
-
- Resolved
-
- duplicates
-
JDK-8222058 Compilation fails on multiVis.c using gcc4.4.6
-
- Closed
-
- relates to
-
JDK-8171000 Robot.createScreenCapture() crashes in wayland mode
-
- Resolved
-