8197546: Fix for 8171000 breaks Solaris + Linux builds

Reviewed-by: serb, jdv